fixed spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,16 +11,13 @@ body{
     color: white;
 }
 
-#instructions{
+#middlesection{
     background: white;
     color: #33353a;
-    position: relative;
-    margin-left: -90px;
-    width: 1050px;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    display: flex;
+    justify-content: center;
 }
+
 
 #counters{
     font-family: 'Poppins', sans-serif;
@@ -37,6 +34,7 @@ body{
 p{
     font-family: 'Arial', sans-serif;
     font-size: 16px;
+    padding-top: 10px;
 }
 
 .crystals{
@@ -51,11 +49,8 @@ p{
 #winsandlosses{
     font-family: 'Poppins', sans-serif;
     font-size: 28px;
-    background: white;
-    color: #33353a;
-    margin-left: 100px;
     padding-top: 46px;
-    padding-bottom: 46px;
+    padding-bottom: 100px;
     padding-left: 40px;
     width: 250px;
 }
